# python-uv-publish

./: pyproject.toml
src/: exported_function.py
