[project]
name = "python-uv-publish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "daichitakahashi", email = "t.daichi.snd@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
]

[tool.uv]
dev-dependencies = [
    "pandas-stubs>=2.2.3.250308",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
